@@ -35,6 +35,12 @@
   <url type="homepage">https://nongnu.org/gsequencer</url>
 
   <releases>
+    <release version="3.6.3" date="2020-10-31">
+      <description>
+	<p>Fixed pthread remains.</p>	
+      </description>
+    </release>
+
     <release version="3.6.2" date="2020-10-29">
       <description>
 	<p>Implemented fast pitch.</p>	
