@@ -1,3 +1,8 @@
+ags (3.6.3)
+
+	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
+	* fixed pthread remains
+
 ags (3.6.2)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
